# MoneyWealthAI

./: .gitignore  DEPLOY.md  DEVOPS_HANDOFF.md  EMAIL_SETUP.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  apprunner.yaml  index.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_gemini.py
backend/app/: audit.py  captcha.py  config.py  context.py  crypto.py  db.py  deps.py  encryption.py  errors.py  logging_conf.py  main.py  middleware.py  money.py  redis_client.py
backend/app/ai/: advisor.py  budget.py  gemini_provider.py  grok_provider.py  groq_provider.py  health.py  mock_provider.py  prompts.py  provider.py  safety.py  snapshot.py  tools.py  validator.py
backend/app/alerts/: checks.py  engine.py
backend/db/: schema.sql
backend/deploy/: task-definition.json
backend/docs/: BACKEND_ARCHITECTURE.md  BUILD_SEQUENCE.md  DR_RUNBOOK.md  PHASE1_PENDING.md  PHASE2_PENDING.md  PHASE3_PENDING.md  PHASE4_PENDING.md  PHASE5_PENDING.md  PHASE6_PENDING.md  PRODUCTION_DEPLOYMENT.md  SECURITY.md
backend/routes/: plaid.js
backend/scripts/: bootstrap_aurora_roles.py  create_admin.py  create_test_user.py  ensure_partitions.py  migrate.py  run_alerts.py  run_evals.py  verify_user.py  worker.py
backend/tests/: conftest.py  test_ai_safety.py  test_ai_validator.py  test_calculations.py  test_captcha.py  test_crypto.py  test_encryption.py  test_evals.py  test_fallback.py  test_hardening.py  test_mailer.py  test_mock_provider.py  test_plaid_webhook.py  test_quiet_hours.py  test_tokens.py
(+249 files in other folders)
